package={name="scm1w",version="0.1.0",edition="2018",authors=["ellis <ellis@rwest.io>"]}
features={default = ["panic","wee"], panic = ["console_error_panic_hook"], wee = ["wee_alloc"]}
profile={release={opt-level="s"}}
[[bin]]
name="scm1w"
path="main.rs"
[dependencies]
scm1 = {path = "../"}
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }


